fix style.css: Removes -fx-graphic-text-gap from color-picker-label for better rendering when resizing

--- a/src/main/resources/fr/softsf/sudokufx/style/style.css
+++ b/src/main/resources/fr/softsf/sudokufx/style/style.css
@@ -141,7 +141,7 @@
 }
 
 .color-picker .color-picker-label .picker-color {
-    -fx-padding: 0 .67em 0 0;
+    -fx-padding: 0 1.07em 0 0;
     -fx-pref-height: 1em;
     -fx-max-height: 1em;
     -fx-min-height: 1em;
@@ -160,9 +160,10 @@
 }
 
 .color-picker .color-picker-label {
-    -fx-padding: 0 0 0 1.98em;
+    -fx-padding: 0 0 0 2.2em;
     -fx-alignment: center-left;
     -fx-text-alignment: left;
+    -fx-graphic-text-gap: 0;
 }
 
 .button.defaultButton:focused,
